fix spacing for mfa

--- a/src/MFA/MFA.css
+++ b/src/MFA/MFA.css
@@ -43,6 +43,10 @@ body, html {
     background: grey;
   }
   
+  .mfa-desc {
+    margin-bottom: 1rem;
+  }
+
   .mfa-title {
     font-size: 24px;
     font-weight: bold;
