--- a/src/PasswordSetup/PasswordSetup.css
+++ b/src/PasswordSetup/PasswordSetup.css
@@ -44,7 +44,7 @@ body, html {
   /* Close button */
   .close-btn {
     position: absolute;
-    top: 15px;
+    top: 4rem;
     right: 15px;
     color: white;
     background-color: black;
